--- a/govan_manager/pubspec.yaml
+++ b/govan_manager/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   path_provider: ^2.0.1
   flutter_masked_text2: ^0.9.1
   web_socket_channel: ^2.1.0
+  # The following adds the HERE SDK for Flutter plugin folder to your application.
+  here_sdk:
+    path: plugins/here_sdk
 
 dev_dependencies:
   flutter_test:
