--- a/govan_passenger/pubspec.yaml
+++ b/govan_passenger/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.17.0
   google_fonts: ^2.0.0
   http: ^0.13.3
   hive: ^2.0.4
