--- a/govan_manager/pubspec.yaml
+++ b/govan_manager/pubspec.yaml
@@ -28,6 +28,6 @@ dev_dependencies:
   hive_generator: ^1.1.0
 flutter:
   assets:
-    - assets/images/
+    - assets/
 
   uses-material-design: true
