--- a/govan_manager/pubspec.yaml
+++ b/govan_manager/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^2.0.0
+  image_picker: ^0.8.4+4
   http: ^0.13.3
   hive: ^2.0.4
   hive_flutter: ^1.1.0
